--- a/index.css
+++ b/index.css
@@ -1,4 +1,16 @@
+/* github_tutorial.htmlのCSS ↓ */
 
 th{
     text-align: center;
 }
+
+/* github_tutorial.htmlのCSS ↑ */
+
+/* menu.htmlのCSS ↓ */
+
+
+/* menu.htmlのCSS ↑ */
+
+/* contents.htmlのCSS ↓ */
+
+/*  */
