--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -300,8 +300,9 @@ footer p{
 }
 
 /* トップへ戻る */
-.pagetop {
+#pagetop {
     position: fixed;
     bottom: 20px;
     right: 20px;
+    display: none;
 }
