--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -208,7 +208,7 @@ figcaption {
     position: absolute;
     width:500px;
     margin-top: 40px;
-    margin-left: 100px;
+    margin-left: 75px;
     font-size: 40px;
     color: #ffd966;
 }
@@ -231,6 +231,10 @@ figcaption {
     margin: 100px 0 10px 280px;
 }
 
+label{
+    font-size: 20px;
+}
+
 #Cname {
     position: absolute;
     margin-left: 350px;
@@ -246,12 +250,12 @@ figcaption {
 #sub{
     position: absolute;
     width: 500px;
-    margin-left: 450px;
-    margin-top: -200px;
+    margin-left: 435px;
+    margin-top: -255px;
 }
 
 #sub p{
-    font-size: 12px;
+    font-size: 17px;
 }
 
 #SNS{
